--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,13 @@
 {
-  "name": "Thermostat Mini",
-  "short_name": "ThermoMini",
+  "name": "Thermostat",
+  "short_name": "Thermo",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
-  "background_color": "#111418",
-  "theme_color": "#0a84ff",
+  "background_color": "#0e1217",
+  "theme_color": "#0e1217",
   "icons": [
-    {
-      "src": "./icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "./icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "./icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
